--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -4,19 +4,15 @@
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
     <ion-title>
-      List
+      Lista de Produtos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-list>
-    <ion-item *ngFor="let item of items">
-      <ion-icon [name]="item.icon" slot="start"></ion-icon>
-      {{item.title}}
-      <div class="item-note" slot="end">
-        {{item.note}}
-      </div>
+    <ion-item *ngFor="let produto of produtos">
+      Nome: {{produto.nome}} | Peso: {{produto.peso}} | Preço: {{produto.preco}}
     </ion-item>
   </ion-list>
   <!--
