--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -10,23 +10,21 @@
 </ion-header>
 
 <ion-content>
-  <form>
     <ion-list lines="full" class="ion-no-margin ion-no-padding">
       <ion-item>
         <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text></ion-label>
-        <ion-input required type="text" name="nome"></ion-input>
+        <ion-input required type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text></ion-label>
-        <ion-input required type="text" name="peso"></ion-input>
+        <ion-input required type="number" [(ngModel)]="produto.peso" name="peso"></ion-input>
       </ion-item>
       <ion-item>
         <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text></ion-label>
-        <ion-input required type="text" name="preco"></ion-input>
+        <ion-input required type="number" [(ngModel)]="produto.preco" name="preco"></ion-input>
       </ion-item>
     </ion-list>
     <div class="ion-padding">
-      <ion-button expand="block" type="submit" class="ion-no-margin">Criar Produto</ion-button>
+      <ion-button expand="block" (click)="createProduct()" class="ion-no-margin">Criar Produto</ion-button>
     </div>
-  </form>
-</ion-content>
+  </ion-content>
