--- a/src/app/update/update.page.html
+++ b/src/app/update/update.page.html
@@ -10,22 +10,25 @@
 </ion-header>
 
 <ion-content>
-  <ion-input type="hidden" [(ngModel)]="produto.idLocal" name="nome" style="position:absolute"></ion-input>
+  <ion-input [(ngModel)]="produto.idLocal" name="idLocal" type="text" style="position:absolute" hidden></ion-input>
   <ion-list lines="full" class="ion-no-margin ion-no-padding">
     <ion-item>
-      <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text>
+      </ion-label>
       <ion-input type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text>
+      </ion-label>
       <ion-input type="number" [(ngModel)]="produto.peso" name="peso"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text></ion-label>
+      <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text>
+      </ion-label>
       <ion-input type="number" [(ngModel)]="produto.preco" name="preco"></ion-input>
     </ion-item>
   </ion-list>
   <div class="ion-padding">
-    <ion-button expand="block" (click)="updateProduct()" class="ion-no-margin">Criar Produto</ion-button>
+    <ion-button expand="block" (click)="updateProduct()" class="ion-no-margin">Alterar Produto</ion-button>
   </div>
 </ion-content>
