--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -10,21 +10,24 @@
 </ion-header>
 
 <ion-content>
-    <ion-list lines="full" class="ion-no-margin ion-no-padding">
-      <ion-item>
-        <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text></ion-label>
-        <ion-input type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text></ion-label>
-        <ion-input type="number" [(ngModel)]="produto.peso" name="peso"></ion-input>
-      </ion-item>
-      <ion-item>
-        <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text></ion-label>
-        <ion-input type="number" [(ngModel)]="produto.preco" name="preco"></ion-input>
-      </ion-item>
-    </ion-list>
-    <div class="ion-padding">
-      <ion-button expand="block" (click)="createProduct()" class="ion-no-margin">Criar Produto</ion-button>
-    </div>
-  </ion-content>
+  <ion-list lines="full" class="ion-no-margin ion-no-padding">
+    <ion-item>
+      <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input type="number" [(ngModel)]="produto.peso" name="peso"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text>
+      </ion-label>
+      <ion-input type="number" [(ngModel)]="produto.preco" name="preco"></ion-input>
+    </ion-item>
+  </ion-list>
+  <div class="ion-padding">
+    <ion-button expand="block" (click)="createProduct()" class="ion-no-margin">Criar Produto</ion-button>
+  </div>
+</ion-content>
