--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -11,21 +11,29 @@
 
 <ion-content>
   <ion-card *ngFor="let produto of produtos">
-    <ion-card-header>
+    <ion-card-header (click)="UpdateProduct(produto.idLocal)">
       <ion-card-title>Nome: {{produto.nome}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
       Peso: {{produto.peso}} Kg<br>Preço: R$ {{produto.preco}}
-      <ion-button color="primary" style="position: absolute;right:1%;bottom:80%" (click)="UpdateProduct(produto.idLocal)">editar
+      <!-- <ion-button color="primary" style="position: absolute;right:1%;bottom:80%" (click)="UpdateProduct(produto.idLocal)">editar
+      </ion-button> -->
+      <ion-button color="danger" style="position: absolute;right:1%;bottom:110%" (click)="DeleteProduct(produto.idLocal)">
+        <ion-icon name="trash"></ion-icon>
       </ion-button>
-      <ion-button color="danger" style="position: absolute;right:1%;bottom:1%" (click)="DeleteProduct(produto.idLocal)">
-        excluir</ion-button>
     </ion-card-content>
   </ion-card>
 
-  <ion-fab-button (click)="createProduct()" style="position:fixed;right:10px;bottom:10px;" color="success">
-    <ion-icon name="add" style="width: 56px;height:56px;"></ion-icon>
-  </ion-fab-button>
+  <ion-fab vertical="bottom" horizontal="start">
+    <ion-fab-button (click)="Sync()">
+      <ion-icon name="sync"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-fab vertical="bottom" horizontal="end">
+    <ion-fab-button (click)="createProduct()" color="success">
+      <ion-icon name="add"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
   <!--
     <div *ngIf="selectedItem" padding>
       You navigated here from <b>{{selectedItem.title }}</b>
