--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -10,6 +10,7 @@
 </ion-header>
 
 <ion-content>
+
   <ion-card *ngFor="let produto of produtos">
     <ion-card-header (click)="UpdateProduct(produto.idLocal)">
       <ion-card-title>Nome: {{produto.nome}}</ion-card-title>
@@ -23,6 +24,13 @@
       </ion-button>
     </ion-card-content>
   </ion-card>
+
+  <ion-infinite-scroll threshold="100px" (ionInfinite)="loadData($event)">
+    <ion-infinite-scroll-content
+      loadingSpinner="bubbles"
+      loadingText="Loading more data...">
+    </ion-infinite-scroll-content>
+  </ion-infinite-scroll>
   <!--
     <div *ngIf="selectedItem" padding>
       You navigated here from <b>{{selectedItem.title }}</b>
