--- a/src/app/update/update.page.html
+++ b/src/app/update/update.page.html
@@ -9,9 +9,9 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content padding center text-center>
   <ion-input [(ngModel)]="produto.idLocal" name="idLocal" type="text" style="position:absolute" hidden></ion-input>
-  <ion-list lines="full" class="ion-no-margin ion-no-padding">
+  <ion-list>
     <ion-item>
       <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text>
       </ion-label>
