--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -4,27 +4,21 @@
       <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title>
-      Produto
+      Cadastro de Produtos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list lines="full" class="ion-no-margin ion-no-padding">
+<ion-content padding center text-center>
+  <ion-list>
     <ion-item>
-      <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text>
-      </ion-label>
-      <ion-input type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
+      <ion-input type="text" [(ngModel)]="produto.nome" name="nome" placeholder="Nome"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text>
-      </ion-label>
-      <ion-input type="number" [(ngModel)]="produto.peso" name="peso"></ion-input>
+      <ion-input type="number" [(ngModel)]="produto.peso" name="peso" placeholder="Peso"></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text>
-      </ion-label>
-      <ion-input type="number" [(ngModel)]="produto.preco" name="preco"></ion-input>
+      <ion-input type="number" [(ngModel)]="produto.preco" name="preco" placeholder="Preço"></ion-input>
     </ion-item>
   </ion-list>
   <div class="ion-padding">
