--- a/src/app/create/create.page.html
+++ b/src/app/create/create.page.html
@@ -12,13 +12,13 @@
 <ion-content padding center text-center>
   <ion-list>
     <ion-item>
-      <ion-input type="text" [(ngModel)]="produto.nome" name="nome" placeholder="Nome"></ion-input>
+      <ion-input type="text" [(ngModel)]="produto.nome" name="nome" placeholder="Nome" required></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="number" [(ngModel)]="produto.peso" name="peso" placeholder="Peso"></ion-input>
+      <ion-input type="number" [(ngModel)]="produto.peso" name="peso" placeholder="Peso" required></ion-input>
     </ion-item>
     <ion-item>
-      <ion-input type="number" [(ngModel)]="produto.preco" name="preco" placeholder="Preço"></ion-input>
+      <ion-input type="number" [(ngModel)]="produto.preco" name="preco" placeholder="Preço" required></ion-input>
     </ion-item>
   </ion-list>
   <div class="ion-padding">
