--- a/src/app/update/update.page.html
+++ b/src/app/update/update.page.html
@@ -15,17 +15,17 @@
     <ion-item>
       <ion-label position="stacked">Nome <ion-text color="danger">*</ion-text>
       </ion-label>
-      <ion-input type="text" [(ngModel)]="produto.nome" name="nome"></ion-input>
+      <ion-input type="text" [(ngModel)]="produto.nome" name="nome" placeholder="Nome" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Peso <ion-text color="danger">*</ion-text>
       </ion-label>
-      <ion-input type="number" [(ngModel)]="produto.peso" name="peso"></ion-input>
+      <ion-input type="number" [(ngModel)]="produto.peso" name="peso" placeholder="Peso" required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label position="stacked">Preço <ion-text color="danger">*</ion-text>
       </ion-label>
-      <ion-input type="number" [(ngModel)]="produto.preco" name="preco"></ion-input>
+      <ion-input type="number" [(ngModel)]="produto.preco" name="preco" placeholder="Preco" required></ion-input>
     </ion-item>
   </ion-list>
   <div class="ion-padding">
